crates/pack/tests/compile_fail/kernel_authority_module_hidden.stderr
error[E0432]: unresolved import `converge_pack::fact::kernel_authority`
 --> tests/compile_fail/kernel_authority_module_hidden.rs:3:21
  |
3 | use converge_pack::{fact::kernel_authority, ContextKey};
  |                     ^^^^^^^^^^^^^^^^^^^^^^ no `kernel_authority` in `fact`
